<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/accelerometer"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/x_axis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/y_axis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/z_axis"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/y_axis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/z_axis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </TableRow>
        
    </TableLayout>
	
   	<ImageView
   		android:id="@+id/image"
        android:contentDescription="@string/accelerometer_desc"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_gravity="center" />
   	        
 	<!-- Accelerometer with 2nd method -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/accelerometer2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/x_axis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/y_axis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/z_axis"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/x_axis2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/y_axis2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/z_axis2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </TableRow>
        
    </TableLayout>
	
   	<ImageView
   		android:id="@+id/image2"
        android:contentDescription="@string/accelerometer_desc2"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_gravity="center" />    	
   	
</LinearLayout>